# simpleetl

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  PLAN.md  README.md  coverage.json  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
benchmarks/: benchmark_dag.py  benchmark_read_write.py  benchmark_streaming.py  benchmark_transformations.py
configs/: dev.yaml  logging.yaml  prod.yaml  staging.yaml  test_e2e.yaml
docs/: alerting.md  api-reference.md  development.md  getting-started.md  index.md  openlineage.md  performance.md  platforms.md  provenance.md  schema.md  security.md
examples/: aggregated_customers.parquet  cloud_storage_job.py  example_job.py  sample_customers.csv  sample_job_config.yaml
examples/configs/: example_job.yaml
examples/dags/: example_dag.yaml
examples/dags/configs/: extract.yaml  load.yaml  transform.yaml
examples/input/: sample_data.csv
examples/jobs/: example_csv_job.py
examples/output/: extracted.parquet  filtered_data.csv  transformed.parquet
k8s/: configmap.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  service-account.yaml  service.yaml
scripts/: benchmark.py  format-code.sh  install-hooks.sh
src/simpleetl/: __init__.py  __main__.py  cli.py  transformations.py
src/simpleetl/core/: __init__.py  (+22 more)
tests/: test_alerting.py  test_checkpoint.py  test_cli.py  test_config.py  test_connection.py  test_coverage_gaps.py  test_dag.py  test_dlq.py  test_errors.py  test_extra_coverage.py  test_filesystem.py  test_final_coverage.py  test_formats.py  test_formats_extended.py  test_glue_platform.py  test_health.py  test_hooks.py  test_incremental.py  test_job.py  test_job_extended.py  test_lineage.py  test_lineage_openlineage.py  test_lineage_provenance.py  test_logger.py  test_main.py  test_metrics.py  test_parallel.py  test_platform_detector.py  test_platforms.py  test_plugins.py  test_quality.py  test_schema_extended.py  test_schema_nested.py  test_schema_registry.py  test_secrets_extended.py  test_security.py  test_table.py  test_transformations.py  test_transformations_extended.py  test_transformations_extra.py
(+12 files in other folders)
